k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-frontend
  namespace: application
  labels:
    app: fraud-frontend
spec:
  type: ClusterIP
  selector:
    app: fraud-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
