k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection
  namespace: application
  labels:
    app: fraud-detection
spec:
  type: ClusterIP
  selector:
    app: fraud-detection
  ports:
    - name: http
      port: 80
      targetPort: 8000
